# MultiAIQuota

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md
.agents/skills/screengrab/: SKILL.md
.github/workflows/: build_hw_monitor.yml
cli/: CMakeLists.txt
cli/src/: cli.cpp  cli.hpp  config_loader.cpp  config_loader.hpp  main.cpp  output.cpp  output.hpp
cli/src/commands/: init.cpp  init.hpp  list.cpp  list.hpp  query.cpp  query.hpp
core/: CMakeLists.txt
core/include/maiq/: config.hpp  error.hpp  http_client.hpp  json.hpp  provider.hpp  query.hpp  types.hpp
core/include/maiq/providers/: codex.hpp  deepseek.hpp  kimi.hpp  newapi.hpp  volcengine.hpp
core/src/: config.cpp  http_client.cpp  provider.cpp  query.cpp  types.cpp
core/src/providers/: codex.cpp  deepseek.cpp  kimi.cpp  newapi.cpp  volcengine.cpp
gui/: CMakeLists.txt
gui/include/gui/: app_state.hpp  display_spec.hpp
gui/include/gui/pages/: dashboard_page.hpp  home_page.hpp  page.hpp  result_page.hpp
gui/src/pages/: dashboard_page.cpp  home_page.cpp  result_page.cpp
host_sim/: CMakeLists.txt
host_sim/include/: lv_conf.h
host_sim/src/: host_main.cpp
hw_monitor/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
hw_monitor/components/board/: CMakeLists.txt  board.cpp
hw_monitor/components/board/include/: board.hpp
hw_monitor/components/core/: CMakeLists.txt
hw_monitor/components/display/: CMakeLists.txt  display.cpp
hw_monitor/components/display/include/: display.hpp
hw_monitor/components/gui/: CMakeLists.txt
hw_monitor/components/http_client_esp/: CMakeLists.txt
hw_monitor/components/http_client_esp/include/: http_client_esp.hpp
hw_monitor/components/http_client_esp/src/: http_client_esp.cpp
hw_monitor/components/input/: CMakeLists.txt  input.cpp
hw_monitor/components/input/include/: input.hpp
hw_monitor/components/multi_button/: CMakeLists.txt
hw_monitor/components/storage/: CMakeLists.txt  storage.cpp
hw_monitor/components/storage/include/: storage.hpp
hw_monitor/components/time_sync/: CMakeLists.txt  time_sync.cpp
hw_monitor/components/time_sync/include/: time_sync.hpp
hw_monitor/components/web_server/: CMakeLists.txt  web_server.cpp
hw_monitor/components/web_server/include/: web_server.hpp
hw_monitor/components/wifi/: CMakeLists.txt  wifi.cpp
hw_monitor/components/wifi/include/: wifi.hpp
hw_monitor/frontend/: index.html  package-lock.json  package.json  vite.config.js
hw_monitor/frontend/src/: App.svelte
hw_monitor/frontend/src/lib/: ConfigPage.svelte  QueryPage.svelte  ScreenPage.svelte  WifiPage.svelte
hw_monitor/main/: CMakeLists.txt  app.cpp  app.hpp  idf_component.yml  main.cpp
pc/: CMakeLists.txt
pc/include/maiq/platform/: http_client_pc.hpp
pc/src/: http_client_pc.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_providers.cpp
